# cpplib

./: .docgen  .gitignore  CMakeLists.txt  readme.md
docs/: index.md
src/: cpp  ezcpp  main.cpp
src/cpplib/: debug.hpp  map.hpp  str.hpp  vec.hpp
